# Open-COBOL-ESQL-4j

./: .gitignore  CHANGELOG.md  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  TODO  check-format  config.h.in  configure  configure.ac  format
.github/workflows/: ci.yml  coverage.yml  doc.yml  static_analysis.yml
.github/workflows/db-settings/: embed_db_info_postgresql_15.sh  embed_db_info_postgresql_9.6.sh
.github/workflows/ubuntu-test-settings/: embed_db_info.sh
dblibj/: .scalafmt.conf  Makefile.am  Makefile.in  build.sbt  check-format  format  scalastyle-config.xml
dblibj/.bsp/: sbt.json
dblibj/project/: plugins.sbt
dblibj/src/main/scala/: Common.scala  Connect.scala  ConnectionInfo.scala  ConstValues.scala  Cursor.scala  DBtype.scala  Disconnect.scala  GlobalState.scala  Main.scala  OCDBState.scala  OccursInfo.scala  Operation.scala  Prepare.scala  PreparedStatementCache.scala  QueryInfo.scala  SQLVar.scala  Select.scala  SqlCA.scala
dblibj/src/test/scala/: CompilerForTest.scala  ConnectTest.scala
doc/source/: conf.py
doc/source/_templates/: layout.html
doc/source/locale/en/LC_MESSAGES/: index.po
doc/source/locale/en/LC_MESSAGES/test/: test1.po  test2.po  test3.mo  test3.po
doc/source/locale/ja/LC_MESSAGES/: index.mo  index.po  sphinx.mo  sphinx.po
doc/source/locale/ja/LC_MESSAGES/test/: test1.mo  test1.po  test2.mo  test2.po  test3.mo  test3.po
doc/source/test/: test2.rst  test3.rst
ocesql/: Makefile.in  check-format  cppcheck  define.h  errorfile.c  format  ocesql.c  ocesql.h  ocesqlutil.c  ocesqlutil.h  parser.c  parser.h  ppout.c  scanner.c  scanner.l
tests/: Makefile  Makefile.am  Makefile.in  atlocal  basic  basic.at  cobol_data  cobol_data.at  embed_db_info.sh  misc  misc.at  package.m4  sql_data  sqlca  sqlca.at
tests/basic.dir/10/: prog.cbl  prog.cob  run
tests/basic.src/: commit-rollback.at  connect-disconnect.at  declare-bind-var.at  declare.at  delete.at  fetch.at  insert.at  open-close.at  other-sql.at  prepare-execute.at  sample.at  select.at  update.at
tests/cobol_data.src/: alphanumeric.at  comp3.at  comp3_signed.at  japanese.at  numeric_signed_v.at  numeric_v.at  packed_signed_v.at
tests/data/: output-sjis.txt  output-utf8.txt
tests/misc.src/: fetch-sqlca.at  group-sub.at  include.at  long-sql.at
tests/sql_data.src/: sql_type.at
tests/sqlca.src/: connect-disconnect.at  errml-errmc.at  fetch-loop.at  insert-select-update-delete.at  open-fetch-close.at  prepare-execute.at
